--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   shared_preferences: ^0.5.10
   cached_network_image: ^2.2.0+1
   flutter_blurhash: ^0.5.0
+  liquid_pull_to_refresh: ^2.0.0
   http:
 
 dev_dependencies:
