--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_blurhash: ^0.5.0
   liquid_pull_to_refresh: ^2.0.0
   http:
+  sqflite: ^1.3.0
+  path_provider: ^1.6.24
 
 dev_dependencies:
   flutter_test:
