--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   http:
   sqflite: ^1.3.0
   path_provider: ^1.6.24
+  dio:
+  url_launcher:
+  intent:
+  image_gallery_saver: ^1.6.6
+  permission_handler: ^5.0.1+1
 
 dev_dependencies:
   flutter_test:
